crates/cli/tests/snapshots/snapshot_tests__json_unused_types_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: redact_version(&json_str)
---
{
  "schema_version": 3,
  "version": "[VERSION]",
  "elapsed_ms": 0,
  "total_issues": 1,
  "summary": {
    "total_issues": 1,
    "unused_files": 0,
    "unused_exports": 0,
    "unused_types": 1,
    "unused_dependencies": 0,
    "unused_enum_members": 0,
    "unused_class_members": 0,
    "unresolved_imports": 0,
    "unlisted_dependencies": 0,
    "duplicate_exports": 0,
    "type_only_dependencies": 0,
    "test_only_dependencies": 0,
    "circular_dependencies": 0,
    "boundary_violations": 0,
    "stale_suppressions": 0
  },
  "unused_files": [],
  "unused_exports": [],
  "unused_types": [
    {
      "path": "src/types.ts",
      "export_name": "OldType",
      "is_type_only": true,
      "line": 5,
      "col": 0,
      "span_start": 60,
      "is_re_export": false,
      "actions": [
        {
          "type": "remove-export",
          "auto_fixable": true,
          "description": "Remove the `export` (or `export type`) keyword from the type declaration"
        },
        {
          "type": "suppress-line",
          "auto_fixable": false,
          "description": "Suppress with an inline comment above the line",
          "comment": "// fallow-ignore-next-line unused-type"
        }
      ]
    }
  ],
  "unused_dependencies": [],
  "unused_dev_dependencies": [],
  "unused_optional_dependencies": [],
  "unused_enum_members": [],
  "unused_class_members": [],
  "unresolved_imports": [],
  "unlisted_dependencies": [],
  "duplicate_exports": [],
  "type_only_dependencies": [],
  "test_only_dependencies": [],
  "circular_dependencies": [],
  "boundary_violations": [],
  "stale_suppressions": []
}
